# lance

./: Cargo.toml
.github/workflows/: cargo-publish.yml  docs-check.yml  docs-deploy.yml  duckdb.yml  java-publish.yml  java.yml  license-header-check.yml  make-release-commit.yml  notebook.yml  pr-title.yml  pypi-publish.yml  python.yml  rust.yml
.github/workflows/build_linux_wheel/: action.yml
.github/workflows/codspeed/: benchmarks.yml
protos/: encodings.proto  file.proto
python/: Cargo.toml  Makefile  pyproject.toml
python/python/benchmarks/: test_dataset_ops.py  test_search.py
python/python/lance/: _datagen.py  dataset.py  file.py  fragment.py
python/python/tests/: test_datagen.py  test_dataset.py  test_fragment.py  test_indices.py
python/src/: datagen.rs  dataset.rs  executor.rs  fragment.rs  indices.rs  lib.rs  tracing.rs
rust/: Cargo.toml
rust/lance-core/src/: utils.rs
rust/lance-core/src/datatypes/: schema.rs
rust/lance-core/src/io/: object_reader.rs  object_store.rs
rust/lance-core/src/utils/: tokio.rs
rust/lance-datagen/: Cargo.toml
rust/lance-datagen/benches/: array_gen.rs
rust/lance-datagen/src/: generator.rs  index.rs  lib.rs
rust/lance-encoding/: Cargo.toml
rust/lance-encoding-datafusion/src/: zone.rs
rust/lance-encoding/benches/: decoder.rs
rust/lance-encoding/src/: decoder.rs  encoder.rs  encodings.rs  format.rs  io.rs  lib.rs  repdef.rs  testing.rs
rust/lance-encoding/src/encodings/: basic.rs  bitmap.rs  logical.rs  physical.rs  value.rs
rust/lance-file/: Cargo.toml
rust/lance-file/benches/: reader.rs
rust/lance-file/src/: format.rs  reader.rs  writer.rs
rust/lance-file/src/format/: metadata.rs  schema.rs
rust/lance-file/src/v2/: io.rs  reader.rs  writer.rs
rust/lance-file/tests/: test_tpch.rs  test_tpch_no_fusion.rs
rust/lance-index/src/: scalar.rs
rust/lance-index/src/scalar/: expression.rs
rust/lance-index/src/vector/: pq.rs
rust/lance-io/: Cargo.toml
rust/lance-io/benches/: scheduler.rs
rust/lance-io/src/: lib.rs  object_store.rs  scheduler.rs
rust/lance/src/: index.rs  utils.rs
rust/src/: dataset.rs  lib.rs
rust/src/index/: prefilter.rs
rust/src/utils/: sql.rs
(+34 files in other folders)
